--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".WelcomeScreen"></activity>
+        <activity android:name=".Settings" />
         <activity android:name=".addTask" />
         <activity android:name=".SignUp" />
         <activity android:name=".SignIn" />
