--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Client"></activity>
+        <activity android:name=".Manager" />
         <activity
             android:name=".MainTasksActivity"
             android:label="@string/title_activity_main_tasks_acticity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TempAllTaskActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Settings" />
